--- a/ExpressServer/package.json
+++ b/ExpressServer/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
+    "helmet": "^7.1.0",
     "ngrok": "^5.0.0-beta.2",
     "npm": "^10.8.2",
     "pm2": "^5.4.2"
